# e-comercial

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json  settings.local.json
.github/workflows/: ci-develop.yml  ci-main.yml  deploy-production-tag.yml
deploy/: .env.example  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
deploy/backend/: Dockerfile  entrypoint.sh
deploy/nginx/: Dockerfile  Dockerfile.local  nginx-main.conf  site-local.conf  site.conf.template
deploy/worker/: Dockerfile
docs/: INDEX.MD
docs/en/: README.md  architecture.md
docs/en/features/: catalog.md  orders.md
docs/en/guides/: development.md  installation.md
docs/ru/: README.md  architecture.md
docs/ru/features/: catalog.md  orders.md
docs/ru/guides/: development.md  installation.md
src/Hop-and-Barley/: gen_demo.py  manage.py  order_items_gen.json  orders_gen.json  reviews_gen.json
src/Hop-and-Barley/cabinet/: adapters.py  auth_urls.py  cabinet.py  context_processors.py  urls.py
src/Hop-and-Barley/cabinet/services/: analytics.py  client.py  conversations.py  orders.py  product.py  users.py
src/Hop-and-Barley/cabinet/templatetags/: cabinet_extras.py
src/Hop-and-Barley/cabinet/views/: analytics.py  auth.py  booking.py  client.py  conversations.py  orders.py  products.py  site_settings.py  users.py
src/Hop-and-Barley/core/: api_urls.py  logger.py  redis.py  sitemaps.py  urls.py
src/Hop-and-Barley/core/settings/: base.py  dev.py  prod.py  test.py
src/Hop-and-Barley/features/conversations/: admin.py  cabinet.py
src/Hop-and-Barley/features/main/: apps.py  sitemaps.py  translations.py  urls.py
src/Hop-and-Barley/features/orders/: admin.py  api.py  apps.py  cabinet.py  cart.py  serializers.py  urls.py  views.py
src/Hop-and-Barley/features/products/: admin.py  api.py  apps.py  cabinet.py  context_processors.py  serializers.py  urls.py
src/Hop-and-Barley/features/reviews/: admin.py  api.py  apps.py  serializers.py  urls.py  views.py
src/Hop-and-Barley/static/css/: app.css  base.css  compiler_config.json
src/Hop-and-Barley/system/: cabinet.py
src/Hop-and-Barley/system/admin/: __init__.py  seo.py  settings.py  static.py
src/Hop-and-Barley/system/migrations/: 0001_initial.py  0002_sitesettings_company_name_and_more.py
src/Hop-and-Barley/system/models/: __init__.py  seo.py  settings.py  user_profile.py
src/Hop-and-Barley/system/selectors/: client_profile.py  users.py
src/Hop-and-Barley/system/services/: client_profile.py  site_settings.py
src/Hop-and-Barley/templates/: base.html
tests/: conftest.py  test_auth.py  test_auth_views.py  test_cart.py  test_catalog.py  test_checkout.py  test_logging.py  test_reviews.py  test_update_products_command.py
tests/e2e/: conftest.py  test_smoke.py
tests/integration/: conftest.py  test_cabinet_analytics.py  test_cabinet_product_modals.py  test_checkout.py  test_conversations_cabinet.py  test_orders_views.py  test_update_products_command.py
tests/integration/features/: test_orders_cabinet.py
tests/unit/: conftest.py  test_auth.py  test_auth_views.py  test_cart.py  test_catalog.py  test_client_profile_service.py  test_conversations.py  test_conversations_selectors.py  test_conversations_services.py  test_core_smoke.py  test_logging.py  test_main_views.py  test_models.py  test_order_service.py  test_orders_api.py  test_orders_cart.py  test_orders_selectors.py  test_products_context_processors.py  test_products_services.py  test_reviews.py  test_reviews_api.py
tools/dev/: check.py  tree.py
(+133 files in other folders)
